maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
	var a=0;
	var direc=Direction.EST;
	
def keepHandOnSideWall(){
	gauche();
	if(estFaceMur){
		droite();
	}else{ avance();gauche();a=a-1;
		  if(estFaceMur){
		  	droite();
		  }else avance();
		}
	if(estFaceMur){
		droite();
			if(estFaceMur){
						droite();
						}else avance();a=a+1;
	}else avance();

}
def isDirLibre(direct:dir):Boolean={
	direc=getDirection();
	setDirection(direct);
	if(estFaceMur){
		setDirection(direc);
		return false
	}else return true
}
while(!estSurBiscuit){
	keepHandOnSideWall();
	if(isDirLibre(dir)){
		avance();
	}
}
prendBiscuit();
if(!estFaceMur){
	droite();droite();
}
}
